Prevent h1 and home button overlap on the smallest screens.

--- a/style.css
+++ b/style.css
@@ -269,6 +269,10 @@ header {
         font-size: 11.4px;
     }
 
+    h1 {
+        font-size: 30px;
+    }
+
     main,
     #primes-container {
         max-width: 100%;
